Aula 01 - Definição de uma API

--- a/05-design_componentes_acessibilidade_2/angular.json
+++ b/05-design_componentes_acessibilidade_2/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "a11y-p2"
+    }
+  },
+  "defaultProject": "a11y-p2",
+  "cli": {
+    "analytics": "0a949605-9d4d-46fb-9dd2-97deb9e7301e"
+  }
 }
